mass refactoring to eliminate completable/listenable future
Everything async eliminated and relying on virtual threads.