@@ -6,28 +6,6 @@
  */
 package com.salesforce.apollo.thoth;
 
-import static com.salesforce.apollo.crypto.SigningThreshold.unweighted;
-
-import java.security.KeyPair;
-import java.security.SecureRandom;
-import java.time.Duration;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-import java.util.concurrent.ConcurrentSkipListMap;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.Executor;
-import java.util.concurrent.Executors;
-import java.util.function.BiFunction;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-
-import org.h2.jdbcx.JdbcConnectionPool;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
-
 import com.salesforce.apollo.archipelago.LocalServer;
 import com.salesforce.apollo.archipelago.Router;
 import com.salesforce.apollo.archipelago.ServerConnectionCache;
@@ -53,24 +31,50 @@ import com.salesforce.apollo.stereotomy.identifier.spec.IdentifierSpecification.
 import com.salesforce.apollo.stereotomy.identifier.spec.RotationSpecification;
 import com.salesforce.apollo.stereotomy.mem.MemKERL;
 import com.salesforce.apollo.stereotomy.mem.MemKeyStore;
+import org.h2.jdbcx.JdbcConnectionPool;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+
+import java.security.KeyPair;
+import java.security.SecureRandom;
+import java.time.Duration;
+import java.util.*;
+import java.util.concurrent.ConcurrentSkipListMap;
+import java.util.concurrent.Executor;
+import java.util.concurrent.Executors;
+import java.util.function.BiFunction;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+
+import static com.salesforce.apollo.crypto.SigningThreshold.unweighted;
 
 /**
  * @author hal.hildebrand
- *
  */
 public class AbstractDhtTest {
-    protected static final ProtobufEventFactory factory     = new ProtobufEventFactory();
-    protected static final boolean              LARGE_TESTS = Boolean.getBoolean("large_tests");
-    protected static final double               PBYZ        = 0.25;
+    protected static final ProtobufEventFactory factory = new ProtobufEventFactory();
+    protected static final boolean LARGE_TESTS = Boolean.getBoolean("large_tests");
+    protected static final double PBYZ = 0.25;
+    protected final Map<SigningMember, KerlDHT> dhts = new HashMap<>();
+    protected final Map<SigningMember, Router> routers = new HashMap<>();
+    protected Context<Member> context;
+    protected Executor exec = Executors.newVirtualThreadPerTaskExecutor();
+    protected Map<SigningMember, ControlledIdentifier<SelfAddressingIdentifier>> identities;
+    protected MemKERL kerl;
+    protected String prefix;
+    protected Stereotomy stereotomy;
+    public AbstractDhtTest() {
+        super();
+    }
 
     public static InceptionEvent inception(Builder<?> specification, KeyPair initialKeyPair, EventFactory factory,
                                            KeyPair nextKeyPair) {
 
         specification.addKey(initialKeyPair.getPublic())
-                     .setSigningThreshold(unweighted(1))
-                     .setNextKeys(List.of(nextKeyPair.getPublic()))
-                     .setWitnesses(Collections.emptyList())
-                     .setSigner(new SignerImpl(initialKeyPair.getPrivate()));
+                .setSigningThreshold(unweighted(1))
+                .setNextKeys(List.of(nextKeyPair.getPublic()))
+                .setWitnesses(Collections.emptyList())
+                .setSigner(new SignerImpl(initialKeyPair.getPrivate()));
         var identifier = Identifier.NONE;
         InceptionEvent event = factory.inception(identifier, specification.build());
         return event;
@@ -80,28 +84,15 @@ public class AbstractDhtTest {
                                          KeyPair nextKeyPair, ProtobufEventFactory factory) {
         var rotSpec = RotationSpecification.newBuilder();
         rotSpec.setIdentifier(prev.getIdentifier())
-               .setCurrentCoords(prev.getCoordinates())
-               .setCurrentDigest(prevDigest)
-               .setKey(prevNext.getPublic())
-               .setSigningThreshold(unweighted(1))
-               .setNextKeys(List.of(nextKeyPair.getPublic()))
-               .setSigner(new SignerImpl(prevNext.getPrivate()));
+                .setCurrentCoords(prev.getCoordinates())
+                .setCurrentDigest(prevDigest)
+                .setKey(prevNext.getPublic())
+                .setSigningThreshold(unweighted(1))
+                .setNextKeys(List.of(nextKeyPair.getPublic()))
+                .setSigner(new SignerImpl(prevNext.getPrivate()));
 
         RotationEvent rotation = factory.rotation(rotSpec.build(), false);
         return rotation;
-    }
-
-    protected Context<Member>                                                    context;
-    protected final Map<SigningMember, KerlDHT>                                  dhts    = new HashMap<>();
-    protected Executor                                                           exec    = Executors.newVirtualThreadPerTaskExecutor();
-    protected Map<SigningMember, ControlledIdentifier<SelfAddressingIdentifier>> identities;
-    protected MemKERL                                                            kerl;
-    protected String                                                             prefix;
-    protected final Map<SigningMember, Router>                                   routers = new HashMap<>();
-    protected Stereotomy                                                         stereotomy;
-
-    public AbstractDhtTest() {
-        super();
     }
 
     @AfterEach
@@ -116,18 +107,12 @@ public class AbstractDhtTest {
     public void before() throws Exception {
         prefix = UUID.randomUUID().toString();
         var entropy = SecureRandom.getInstance("SHA1PRNG");
-        entropy.setSeed(new byte[] { 6, 6, 6 });
+        entropy.setSeed(new byte[]{6, 6, 6});
         kerl = new MemKERL(DigestAlgorithm.DEFAULT);
         stereotomy = new StereotomyImpl(new MemKeyStore(), kerl, entropy);
-        identities = IntStream.range(0, getCardinality()).mapToObj(i -> {
-            try {
-                return stereotomy.newIdentifier().get();
-            } catch (InterruptedException | ExecutionException e) {
-                throw new IllegalStateException(e);
-            }
-        })
-                              .collect(Collectors.toMap(controlled -> new ControlledIdentifierMember(controlled),
-                                                        controlled -> controlled));
+        identities = IntStream.range(0, getCardinality()).mapToObj(i -> stereotomy.newIdentifier())
+                .collect(Collectors.toMap(controlled -> new ControlledIdentifierMember(controlled),
+                        controlled -> controlled));
         context = Context.<Member>newBuilder().setpByz(PBYZ).setCardinality(getCardinality()).build();
         ConcurrentSkipListMap<Digest, Member> serverMembers = new ConcurrentSkipListMap<>();
         identities.keySet().forEach(member -> instantiate(member, context, serverMembers));
@@ -135,7 +120,7 @@ public class AbstractDhtTest {
         System.out.println();
         System.out.println();
         System.out.println(String.format("Cardinality: %s, Prob Byz: %s, Rings: %s Majority: %s", getCardinality(),
-                                         PBYZ, context.getRingCount(), context.majority()));
+                PBYZ, context.getRingCount(), context.majority()));
         System.out.println();
     }
 
@@ -151,12 +136,12 @@ public class AbstractDhtTest {
         JdbcConnectionPool connectionPool = JdbcConnectionPool.create(url, "", "");
         connectionPool.setMaxConnections(10);
         var router = new LocalServer(prefix, member, exec).router(ServerConnectionCache.newBuilder().setTarget(2),
-                                                                  exec);
+                exec);
         routers.put(member, router);
         dhts.put(member,
-                 new KerlDHT(Duration.ofMillis(5), context, member, wrap(), connectionPool, DigestAlgorithm.DEFAULT,
-                             router, exec, Duration.ofSeconds(10),
-                             Executors.newScheduledThreadPool(2, Thread.ofVirtual().factory()), 0.0125, null));
+                new KerlDHT(Duration.ofMillis(5), context, member, wrap(), connectionPool, DigestAlgorithm.DEFAULT,
+                        router, exec, Duration.ofSeconds(10),
+                        Executors.newScheduledThreadPool(2, Thread.ofVirtual().factory()), 0.0125, null));
     }
 
     protected BiFunction<KerlDHT, KERL, KERL> wrap() {
